--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.10.2</version> <!-- Use the latest stable version -->
+            <version>7.10.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -63,7 +63,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -79,6 +79,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
+<!--                <configuration>-->
+<!--                    <forkCount>0</forkCount>-->
+<!--                </configuration>-->
             </plugin>
 
 <!--            <plugin>-->
