--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,32 +1,22 @@
-name: API Test
+name: API Tests
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      # Install dependencies (adjust based on your language and tools)
+      - name: Install Maven dependencies (if using Java)
+        uses: maven/maven-action@v3
         with:
-          distribution: 'adopt'
-          java-version: '11'
+          goals: install
 
-      - name: Cache Maven packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven
-
-      - name: Install dependencies
-        run: mvn install -DskipTests
-
-      - name: Run tests
-        run: mvn test
+      # Run your tests (adjust the command based on your setup)
+      - name: Run Cucumber tests
+        run: mvn test -Dcucumber.options="--tags @Employee"
