added readme file

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <version>7.10.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>7.10.1</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -79,6 +85,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
+                <configuration>
+                <parallel>methods</parallel>
+                <useUnlimitedThreads>false</useUnlimitedThreads>
+                    <includes>
+                        <include>**/TestRunner.class</include>
+                    </includes>
+                </configuration>
             </plugin>
 
             <plugin>
